--- a/STSEval/app/templates/app/d1.html
+++ b/STSEval/app/templates/app/d1.html
@@ -205,7 +205,7 @@
 <script type="module" src="{% static 'app/scripts/wowza/play.js' %}?v=1"></script>
 <script src="https://www.webrtc-experiment.com/EBML.js"></script> 
 <script src="{% static 'app/scripts/RecordRTC.js' %}"></script>
-<script src="{% static 'app/scripts/stream_listener.js' %}?v=1.23"></script>
+<script src="{% static 'app/scripts/stream_listener.js' %}?v=1.24"></script>
 <script src="{% static 'app/scripts/sortable.min.js' %}?v=1.1"></script>
 <script src="{% static 'app/scripts/start_list.js' %}?v=1.1"></script>
 <script type="text/javascript">
@@ -280,6 +280,7 @@
     var JudgeOnFirebase;
     var PrevRotation = "";
     var BackupVideo = -1;
+    var Overview = false;
     var db = firebase.firestore();
     for (var i = 1; i <= 4; i++) {
         EJudgesReady[i] = false;
