--- a/STSEval/app/templates/app/overview.html
+++ b/STSEval/app/templates/app/overview.html
@@ -13,7 +13,7 @@
                 <video id="player-video" autoplay playsinline controls muted class="live-video" style="display:none"></video>
                 
             </div><div id="divAthlete" align="center"></div>
-            
+            <div id="video-playback"></div>
         </div>
         <div class="col-xl-6 col-12 pl-4" align="left">
             <h3 class="pl-4">Officials</h3>
@@ -66,7 +66,7 @@
 {% block scripts %}
 <script src="https://www.webrtc-experiment.com/EBML.js"></script> 
 <script type="module" src="{% static 'app/scripts/wowza/play.js' %}?v=1"></script>
-<script src="{% static 'app/scripts/stream_listener.js' %}?v=1.11"></script>
+<script src="{% static 'app/scripts/stream_listener.js' %}?v=1.24"></script>
 <script src="{% static 'app/scripts/sortable.min.js' %}?v=1.1"></script>
 <script src="{% static 'app/scripts/start_list.js' %}?v=1.1"></script>
 
@@ -92,6 +92,8 @@
 <script type="text/javascript">
     var CurrentAthlete = -1;
     var db = firebase.firestore();
+    var BackupVideo = -1;
+    var Overview = true;
     var docRef = db.collection("sessions").doc(Session).collection("event_managers").doc(ev);
     docRef.onSnapshot(function (doc) {
         console.log("Event Manager Snapshot CurAth: " + CurrentAthlete + " | NewAth: " + doc.data().athlete_id);
