--- a/STSEval/app/templates/app/layout.html
+++ b/STSEval/app/templates/app/layout.html
@@ -46,6 +46,9 @@
                                         <a class="dropdown-item" onclick="EventChanged('HB')">HB</a>
                                     </div>
                                 </li>-->
+                                {% if help %}
+                                    <li class="nav-item align-self-center"><a class="nav-link" href="" data-toggle="modal" data-target="#modalMain" onclick="HelpClick('{{help}}')">help</a></li>
+                                {% endif %}
                                 {% if display_type %}
                                     {% if display_type == 'single' %}
                                         <li class="nav-item align-self-center"><a class="nav-link" href="/spectate/{{session.id}}/dual/{{event_name}}">dual display</a></li>
@@ -143,6 +146,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="{% static 'app/scripts/bootstrap.js' %}"></script>
     <script src="{% static 'app/scripts/respond.js' %}"></script>
+    <script src="{% static 'app/scripts/help.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-firestore.js"></script>
@@ -166,11 +170,7 @@ function EventChanged(evIn)
 {
     window.location = window.location.href.replace("e={{event|upper}}", "e=" + evIn);
 }
-function help_nav(shown, hidden) {
-document.getElementById(shown).style.display='block';
-document.getElementById(hidden).style.display='none';
-return false;
-}
+
 </script>
 {% block scripts %}{% endblock %}
 
