--- a/STSEval/management/templates/management/setup_athletes.html
+++ b/STSEval/management/templates/management/setup_athletes.html
@@ -48,15 +48,12 @@
 	        </div>
 	    </div>
     </div>
-    <div id="divRotationNote" style="font-size:.85rem">NOTE: Athlete rotation signifies which event they start on. {{rotation_note}}</div>
+    <div id="divRotationNote" style="font-size:.85rem">NOTE: Athlete rotation signifies which event they start on depending on rotation settings (next screen). {{rotation_note}}</div>
     <br/>
-    
-    <div id="divRotationNote"  style="font-size:.85rem">Once all athletes are entered and in the correct order, use the button below to create the start lists.</div>
-    <button href="#" id="btnGenStartList" type="button" class="btn btn-main management-button" onclick="GenerateStartListClick()">Generate Start Lists</button>
     <br/>
     <div>
         <button id="btnBack" type="button" class="btn-main pt-4 pb-4" style="border-radius: 1rem;" onclick="GoBack()">Return to<br/>Previous Page</button>
-        <button id="btnNext" type="button" class="btn-main pt-4 pb-4" style="border-radius: 1rem;" onclick="NextClick()">Save and<br/>Continue (3/6)</button>
+        <button id="btnNext" type="button" class="btn-main pt-4 pb-4" style="border-radius: 1rem;" onclick="NextClick()">Save and<br/>Continue (3/7)</button>
     </div>
 
 </div>
@@ -87,7 +84,7 @@
     }
 
     function NextClick() {
-        window.location = "/management/setup_cameras/" + SessionID;
+        window.location = "/management/setup_rotations/" + SessionID;
     }
 
     function AthleteClick(athIn) {
