--- a/STSEval/management/templates/management/setup_finish.html
+++ b/STSEval/management/templates/management/setup_finish.html
@@ -26,10 +26,17 @@
         <button id="btnSendEmails" type="button" class="btn-main btn-wide pt-4 pb-4" style="border-radius: 1rem;" onclick="Send()">Send</button>
         <br/><br/>
     {% if not session_active %}
-    <div id="divActivate">
-        Activate the competition when ready.<br/>
-        <button id="btnActivate" type="button" class="btn-main btn-wide pt-4 pb-4" style="border-radius: 1rem;" onclick="Activate()">Activate</button>
-    </div>
+        {% if missed_athlete or missed_camera %}
+        <div id="divActivate">
+            Setup incomplete, finish setup to allow activation.<br/>
+            <button id="btnActivate" type="button" class="btn-main btn-wide pt-4 pb-4 ui-disabled" style="border-radius: 1rem;" onclick="Activate()">Activate</button>
+        </div>
+        {% else %}
+            <div id="divActivate">
+                Activate the competition when ready.<br/>
+                <button id="btnActivate" type="button" class="btn-main btn-wide pt-4 pb-4" style="border-radius: 1rem;" onclick="Activate()">Activate</button>
+            </div>
+        {% endif %}
     {% endif %}
      <button id="btnSessionOverview" type="button" class="btn-main btn-wide pt-4 pb-4" style="border-radius: 1rem;{% if not session_active %}display:none{% endif %}" onclick="btnSessionOverviewClick()">Session<br/>Overview</button>
     <br/>
