--- a/STSEval/app/templates/app/video_scoreboard.html
+++ b/STSEval/app/templates/app/video_scoreboard.html
@@ -4,6 +4,7 @@
      <div class="d-flex justify-content-between scoreboard-section pl-1 pr-1">
         <div>{{score.team}}</div>
         <div>{{score.score}}</div>
+        <div>{{score.dif}}</div>
     </div>
     {% endfor %}
 </div>
