--- a/STSEval/management/templates/management/setup_judges.html
+++ b/STSEval/management/templates/management/setup_judges.html
@@ -7,6 +7,7 @@
     <div id="divJudges" style="max-width:800px;min-height:276px">
 
     </div>
+    <button href="#" id="btnImport" type="button" class="btn btn-main management-button-long" onclick="ImportJudgesStart()" data-toggle="modal" data-target="#modalMain">Import</button><br/>
     <select id="ddlEvent" class="selectpicker" data-style="btn-main management-button-long" onchange="EventClick()">
         {% for event in events %}
             <option value="{{event.id}}">{{event.full_name}}</option>
@@ -199,6 +200,45 @@
        
     }
 
-   
+    function ImportJudgesStart() {
+        $("#modalMainDoc").addClass("modal-lg");
+        $("#modalMainTitle").html("IMPORT JUDGES");
+        $("#modalBodyArea2").hide();
+        $("#modalBodyArea1").empty();
+        $("#modalBodyArea1").load("/management/judge_list_upload/?session=" + SessionID, function () {
+            AttachImportForm();
+        });
+
+        $("#modalBodyArea1").show();
+    }
+     function JudgeImportFinishParent() {
+        $("#modalMain").modal('hide');
+         EventClick();
+        
+    }
+    function AttachImportForm() {
+        var frm_upload = $('#form_upload');
+        //$("#id_team").val(SelectedTeam);
+        $("#id_session_upload").val(SessionID);
+        frm_upload.submit(function () {
+            console.log("forming");
+            $.ajax({
+                type: frm_upload.attr('method'),
+                url: frm_upload.attr('action'),
+                data: new FormData(document.getElementById("form_upload")),
+                contentType: false,
+                processData: false,
+                success: function (data) {
+                    alert(data);
+                    Changed = false;
+                    JudgeImportFinishParent();
+
+                },
+                error: function(data) {
+                }
+            });
+            return false;
+        });
+    }
 </script>
 {% endblock %}
