spectator feed setup

--- a/STSEval/app/static/app/content/site.css
+++ b/STSEval/app/static/app/content/site.css
@@ -488,3 +488,9 @@ input[type="checkbox"].input-validation-error {
 .coach-fall-timer {
     font-size:1.3rem;
 }
+
+.updates-area {
+    background-color: #373747;
+    color: #ffffff /*{c-bup-color}*/;
+    font-size:.8rem;
+}
