--- a/STSEval/app/templates/app/overview.html
+++ b/STSEval/app/templates/app/overview.html
@@ -202,7 +202,7 @@
             data: {
             },
             success: function (data) {
-                alert("Athlete Reset.  Judges should reload their screens.");
+                alert("Athlete Reset.  Judges on " + ev + " should reload their screens.");
               
             }
         });
