--- a/STSEval/app/templates/app/video_scoreboard.html
+++ b/STSEval/app/templates/app/video_scoreboard.html
@@ -3,7 +3,7 @@
     {% for score in scores %}
      <div class="row no-gutters scoreboard-section pl-1 pr-1">
         <div class="col-4" align="left">{{score.team}}</div>
-        <div class="col-4" align="right">{{score.score}}</div>
+        <div class="col-4" align="center">{{score.score}}</div>
         <div class="col-4" align="right">{{score.dif}}</div>
     </div>
     {% endfor %}
