--- a/STSEval/app/templates/app/event_select_with_aa.html
+++ b/STSEval/app/templates/app/event_select_with_aa.html
@@ -1,5 +1,5 @@
 {% load staticfiles %}
-<div class="d-flex col-12 flex-wrap">
+<div class="d-flex col-12 flex-wrap" style="padding-left:0px!important;padding-right:0px!important">
     {% for ev in events %}
         <div class="flex-grow-1">
             <button id="btn{{ev.name}}" type="button" class="btn btn-event{% if ev.name|lower == event_name|lower %}-selected{% endif %} mb-2" onclick="SwapEvent('{{ev.name|upper}}')"><img src="{% static 'app/images/' %}{{ev.name|lower}}-white.svg" height="45px"/></button>
