--- a/STSEval/app/templates/app/d1.html
+++ b/STSEval/app/templates/app/d1.html
@@ -201,7 +201,7 @@
 {% endblock %}
 
 {% block scripts %}
-<script src="{% static 'app/scripts/dots_area.js' %}?v=1.3"></script>
+<script src="{% static 'app/scripts/dots_area.js' %}?v=1.31"></script>
 <script type="module" src="{% static 'app/scripts/wowza/play.js' %}?v=1"></script>
 <script src="https://www.webrtc-experiment.com/EBML.js"></script> 
 <script src="{% static 'app/scripts/RecordRTC.js' %}"></script>
@@ -972,6 +972,7 @@
                 $("#divHeader").html("<h2 style='display:inline'>" + GymnastLabels[data['athlete_id']] + "</h2>");
                 LoadVideo();
                 console.log($("#divDotsArea").width());
+                RoutineLength = data['athlete_done_time'] - data['start_time'];
                 
                 $("#btnAccountability").removeClass("ui-disabled");
                 setTimeout(RoutineLoadBuildDots,1000)
