--- a/STSEval/app/templates/app/dot_change.html
+++ b/STSEval/app/templates/app/dot_change.html
@@ -41,4 +41,13 @@
         <img src="{% static 'app/images/dots/' %}redx.svg"  height="36" onclick="DedClick(0)">
     </div>
 </div>
+<div id="divChangeDedSelect" style="position:absolute;z-index:104;text-align:center;padding:5px;overflow:auto;display:none;background-color:rgb(97, 97, 106);color:white"  class="rounded">
+      <button type="button" class="close" aria-label="Close" style="margin-left:inherit" onclick="ChangeEjuryDone()">
+          <span aria-hidden="true">&times;</span>
+        </button>
+     <div id="lblChangeDedSelect" style="min-width:250px;width:100%">Overlapping Deductions<br/>Select Which to Change.</div>
+    <div id="divSelectDots" class="d-flex justify-content-center">
+
+    </div>
+</div>
 <div id="DotsChangeBlackout" style="width:100%;height:100%;background-color:#000000;opacity: .3;position:fixed;z-index:103;display:none" onclick="ChangeEjuryDone()"></div>
