--- a/STSEval/app/templates/app/d1.html
+++ b/STSEval/app/templates/app/d1.html
@@ -240,6 +240,8 @@
     var VideoLocation = "/media/routine_videos/";
     var MultiD = {{multi_d|lower}};
     var LoadFrom = "";
+    console.log("base: {{base_dir}}");
+    console.log("media: {{media_dir}}");
 
 </script>
 <script type="text/javascript">
