--- a/STSEval/app/templates/app/layout.html
+++ b/STSEval/app/templates/app/layout.html
@@ -18,21 +18,21 @@
     <div id="divFullScreen">
         <div class="navbar navbar-dark navbar-expand-xl" style="padding:.0rem 1rem">
             <div class="container-fluid">
-                <div class="d-flex w-50 order-0">
+                <div class="d-flex order-0">
                     <a class="navbar-brand" href="/"><img class="pt-1" src="{% static 'app/images/stslivegym-white.svg' %}" style="height:35px"></a>
-                    <button class="navbar-toggler ml-1" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
+                    <span id="title" class="navbar-brand" style="margin-bottom:0px;margin-top:3px">{{title}}</span>
+                    
                 </div>
                 
-                <div class="navbar-brand mx-auto d-block text-center order-0 order-md-1 w-25"><h4 id="title">{{title}}</h4></div>
-                
-                <div class="navbar-collapse collapse justify-content-end order-2 w-50 pull-right" id="collapsingNavbar">
+                <button class="navbar-toggler ml-1" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                <div class="navbar-collapse collapse justify-content-end" id="collapsingNavbar">
                     
-                    <ul class="navbar-nav">
+
                         <form id="logoutForm" action="/account/logout/" method="post">
                             {% csrf_token %}
-                            <ul class="nav navbar-nav ml-auto justify-content-end">
+                            <ul class="nav navbar-nav">
                                     <!--<li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         {{event|upper}}
@@ -67,7 +67,7 @@
                             </ul>
                         </form>
 
-                    </ul>
+                    
                 </div>
                         
             </div>
